--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -15,29 +15,9 @@ jobs:
       - name: Azure Login
         uses: Azure/login@v1
         with:
-             client-id:  "1b648961-aabc-49fb-96be-5436e0038d7c"
-             tenant-id:  "58bade9d-b753-4cdd-bea4-6183f95a1ce5"
-             subscription-id: "02cd8bbf-2d3c-4eed-9c95-cf75af7acd37"
+             client-id:  ${{secrets.AZURE_CLIENT_ID}}
+             tenant-id:   ${{secrets.AZURE_TENANT_ID}}
+             subscription-id:  ${{secrets.AZURE_SUBSCRIPTION_ID}}
              enable-AzPSSession: true
 
 
-      - name: checkout 
-        uses: actions/checkout@v1
-
-      - name: Azure WebApp
-        uses: Azure/webapps-deploy@v2.2.11
-        with:
-    # Name of the Azure Web App
-          app-name: app1356
-    # Applies to Web Apps(Windows and Linux) and Web App Containers(linux). Multi container scenario not supported. Publish profile (*.publishsettings) file contents with Web Deploy secrets
-    
-    # Applies to Web App only: Path to package or folder. *.zip, *.war, *.jar or a folder to deploy
-          package: "BlazorApp1/publish"
-    
-    # Enter the resource group name of the web app
-          resource-group-name: rg1
-
-
-
-       
-             
